test/expected/set_o_startup_only.out
[CompoundList]
  [CompoundListCondition, None]
    [Pipeline]
      [SimpleCommand "set" "-p"]
      [SimpleCommand "grep" "-E" "login|init-as-bash|rcfile"]
  [CompoundListCondition, None]
    [SimpleCommand "set" "-o" "login"]
  [CompoundListCondition, None]
    [SimpleCommand "echo" "not-reached"]
[Word
  Unquoted "set"
]
[Word
  Unquoted "-p"
]
[Word
  Unquoted "grep"
]
[Word
  Unquoted "-E"
]
[Word
  Literal "login|init-as-bash|rcfile"
]
[Word
  Unquoted "set"
]
[Word
  Unquoted "-o"
]
[Word
  Unquoted "login"
]
[Word
  Unquoted "echo"
]
[Word
  Unquoted "not-reached"
]
      login             [off] Whether the shell started as a login shell, fixed at startup.
      init-as-bash      [off] Whether the shell initialized from the bash configs, fixed at startup.
      rcfile            [off] Whether a custom rc file was named at startup, fixed at startup.
shit: 3:1: error: Builtin 'set': Unable to change 'login' because it is fixed at shell startup.
     3 |  set -o login
       |  ^~~~~~~~~~~~ here.
